--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# $\text{I}^2\text{VC}$ : A Unified Framework for Intra & Inter-frame Video Compression
+# IV2C: A Unified Framework for Intra & Inter-frame Video Compression
 
 
 
